<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.sign.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/welcome_to"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_sign_in_to_your_account"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_13ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_13ssp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/text_sign_in_to_your_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:text="@string/sign_in_your_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/layout_header"
            app:layout_constraintTop_toBottomOf="@id/layout_header" />

        <TextView
            android:id="@+id/text_no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/do_not_have_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_6sdp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_no_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/card_sign_in" />

        <ProgressBar
            android:id="@+id/signInProgress"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/btn_sign_in"
            app:layout_constraintBottom_toBottomOf="@id/btn_sign_in"
            app:layout_constraintStart_toStartOf="@id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>