<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.sign.SignUpFragment">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_500"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:text="@string/sign_up"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/welcome_to"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textAlignment="center"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp"
                >
                <LinearLayout
                    android:id="@+id/layout_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@id/text_sign_in"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_marginBottom="@dimen/_2sdp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_regular"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/_13ssp"
                            android:inputType="textPersonName"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_marginBottom="@dimen/_2sdp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_regular"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/_13ssp"
                            android:inputType="textPersonName"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_marginBottom="@dimen/_2sdp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_regular"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/_13ssp"
                            android:inputType="textEmailAddress"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true"
                        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_regular"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/_13ssp"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:hint="@string/confirm_password"
                        app:passwordToggleEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_regular"
                            android:includeFontPadding="false"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/_13ssp"
                            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/sign_up"
                    app:layout_constraintTop_toBottomOf="@id/card_sign_in"
                    />

                <ProgressBar
                    android:id="@+id/signUpProgress"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:indeterminate="true"
                    />
            </FrameLayout>

            <TextView
                android:id="@+id/text_have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />
            <TextView
                android:id="@+id/text_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/_14ssp"
                android:padding="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_have_account" />

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>